--- a/OutlookAndroidEngineerChallenge/app/src/main/res/menu/menu_main.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/menu/menu_main.xml
@@ -3,11 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="outlookchallenge.jmduque.com.outlookandroidengineerchallenge.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_set_view"
+        android:icon="@drawable/ic_view_list_white_24dp"
         android:orderInCategory="100"
-        android:title="@string/action_settings" />
+        android:title="@string/oaec_action_set_view"
+        app:showAsAction="always" />
     <item
         android:id="@+id/action_settings"
+        android:icon="@drawable/ic_settings_white_24dp"
         android:orderInCategory="200"
-        android:title="@string/action_settings" />
+        android:title="@string/oaec_action_settings"
+        app:showAsAction="always" />
 </menu>
