--- a/OutlookAndroidEngineerChallenge/app/src/main/res/values/colors.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#0072C6</color>
     <color name="colorPrimaryDark">#0063AD</color>
     <color name="colorAccent">#0072C6</color>
+
+    <color name="agenda_icon">#B1355F</color>
 </resources>
