--- a/OutlookAndroidEngineerChallenge/app/src/main/res/values/dimens.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/values/dimens.xml
@@ -3,4 +3,11 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Spacings -->
+    <dimen name="oaec_small_spacing">4dp</dimen>
+    <dimen name="oaec_medium_spacing">8dp</dimen>
+    <dimen name="oaec_large_spacing">12dp</dimen>
+    <dimen name="oaec_xlarge_spacing">16dp</dimen>
+
 </resources>
