--- a/OutlookAndroidEngineerChallenge/app/src/main/res/layout/item_agenda_event.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/layout/item_agenda_event.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/time"
+            android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:textAppearanceSmall"
@@ -40,7 +40,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAppearance="?android:textAppearanceSmall"
