--- a/OutlookAndroidEngineerChallenge/app/src/main/res/layout/item_agenda_no_event.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/layout/item_agenda_no_event.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/oaec_agenda_no_event"
