--- a/OutlookAndroidEngineerChallenge/app/src/main/res/values/styles.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/values/styles.xml
@@ -17,19 +17,15 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="oaec_agenda_header">
+    <style name="oaec_agenda_cell">
+        <item name="android:background">@color/agenda_header_other_day_background</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingBottom">@dimen/oaec_small_spacing</item>
+        <item name="android:paddingBottom">@dimen/oaec_medium_spacing</item>
         <item name="android:paddingLeft">@dimen/oaec_xlarge_spacing</item>
         <item name="android:paddingRight">@dimen/oaec_xlarge_spacing</item>
-        <item name="android:paddingTop">@dimen/oaec_small_spacing</item>
-    </style>
-
-    <style name="oaec_agenda_cell">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">@dimen/oaec_xlarge_spacing</item>
+        <item name="android:paddingTop">@dimen/oaec_medium_spacing</item>
+        <item name="android:layout_marginBottom">@dimen/oaec_xsmall_spacing</item>
     </style>
 
 </resources>
