--- a/OutlookAndroidEngineerChallenge/app/src/main/res/layout/content_main.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/layout/content_main.xml
@@ -8,10 +8,17 @@
     tools:context="outlookchallenge.jmduque.com.outlookandroidengineerchallenge.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
+        android:id="@+id/calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:rvp_singlePageFling="true"
+        app:rvp_triggerOffset="0.3" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/agenda"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/calendar" />
 
 </RelativeLayout>
