--- a/OutlookAndroidEngineerChallenge/app/src/main/res/layout/activity_main.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,34 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <LinearLayout
+                android:id="@+id/ll_month_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="?android:selectableItemBackground"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_month_picker_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:minWidth="60dp"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    tools:text="December" />
+
+                <ImageView
+                    android:id="@+id/iv_month_picker_arrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/oaec_small_spacing"
+                    android:src="@drawable/ic_expand_more_white_24dp" />
+
+            </LinearLayout>
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
