--- a/OutlookAndroidEngineerChallenge/app/src/main/res/layout/content_main.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/layout/content_main.xml
@@ -4,21 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="outlookchallenge.jmduque.com.outlookandroidengineerchallenge.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <com.lsjwzh.widget.recyclerviewpager.RecyclerViewPager
-        android:id="@+id/calendar"
+        android:id="@+id/rv_calendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="@dimen/oaec_small_elevation"
+        android:visibility="gone"
         app:rvp_singlePageFling="true"
         app:rvp_triggerOffset="0.3" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/agenda"
+        android:id="@+id/rv_agenda"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/calendar" />
+        android:layout_below="@id/rv_calendar" />
 
 </RelativeLayout>
