--- a/OutlookAndroidEngineerChallenge/app/src/main/res/layout/item_agenda_event.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/layout/item_agenda_event.xml
@@ -15,7 +15,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/date"
+                android:id="@+id/tv_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:textAppearanceSmall"
@@ -24,7 +24,7 @@
                 tools:text="18:00" />
 
             <TextView
-                android:id="@+id/duration"
+                android:id="@+id/tv_duration"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:textAppearanceSmall"
@@ -49,7 +49,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:textAppearanceSmall"
@@ -58,7 +58,7 @@
                 tools:text="Team Dinner" />
 
             <TextView
-                android:id="@+id/location"
+                android:id="@+id/tv_location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/oaec_small_spacing"
