--- a/OutlookAndroidEngineerChallenge/app/src/main/res/layout/item_calendar_header.xml
+++ b/OutlookAndroidEngineerChallenge/app/src/main/res/layout/item_calendar_header.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/day"
+        android:id="@+id/tv_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
